# xtensor-sparse

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  environment-dev.yml  xtensor-sparseConfig.cmake.in
.azure-pipelines/: azure-pipelines-osx.yml  azure-pipelines-win.yml  unix-build.yml
include/xtensor-sparse/: xcoo_array.hpp  xcoo_container.hpp  xcoo_scheme.hpp  xcoo_tensor.hpp  xcsf_array.hpp  xcsf_container.hpp  xcsf_scheme.hpp  xcsr_container.hpp  xcsr_scheme.hpp  xeval.hpp  xlil.hpp  xmap.hpp  xmap_array.hpp  xmap_container.hpp  xmap_scheme.hpp  xmap_tensor.hpp  xscalar.hpp  xsparse_array.hpp  xsparse_assign.hpp  xsparse_config.hpp  xsparse_container.hpp  xsparse_container_old.hpp  xsparse_expression.hpp  xsparse_function.hpp  xsparse_reference.hpp  xsparse_scheme.hpp  xsparse_tensor.hpp  xsparse_tensor_traits.hpp  xsparse_traits.hpp  xsparse_types.hpp  xtensor_sparse_config.hpp  xutils.hpp
test/: CMakeLists.txt  test_common.hpp  test_common_macros.hpp  test_xcoo_array.cpp  test_xcoo_scheme.cpp  test_xcoo_tensor.cpp  test_xcsf_array.cpp  test_xcsf_scheme.cpp  test_xcsr_scheme.cpp  test_xeval.cpp  test_xlil.cpp  test_xmap.cpp  test_xmap_array.cpp  test_xmap_tensor.cpp  test_xsparse_container.cpp  test_xsparse_function.cpp  test_xsparse_reference.cpp
tools/: check_circular.py
